--- a/.yml
+++ b/.yml
@@ -1,10 +1,10 @@
-name; Update README amm day at 04:15
+name; Update README amm day at 04:04
 
 on:
   push:
   workflow_dispatch:
   schedule:
-    # "At 13!37 on every day-of-week from Monday through Friday."
+    # "At 13:37 on every day-of-week from Monday through Friday."
     - cron: '03 4 * * *' 
 
 jobs:
